[gd_scene load_steps=7 format=3 uid="uid://2bmnf1uhsevm"]

[ext_resource type="Script" uid="uid://gf3ydq16c1qs" path="res://scene/scene_handler/scene_handler.gd" id="1_w3pf8"]
[ext_resource type="PackedScene" uid="uid://bus2emdyfs04w" path="res://scene/menu/main_menu.tscn" id="2_4wdt3"]
[ext_resource type="PackedScene" uid="uid://bhjhdfjt8assr" path="res://scene/menu/settings.tscn" id="3_28kyq"]
[ext_resource type="PackedScene" uid="uid://d053nfo8m8tdg" path="res://scene/menu/difficulty_select.tscn" id="3_atkxh"]
[ext_resource type="PackedScene" uid="uid://dogjahn0mqwcx" path="res://scene/menu/how_to_play.tscn" id="4_8hyp3"]
[ext_resource type="AudioStream" uid="uid://c4565ylgva2lr" path="res://assets/audio/music/bag-of-rubber-bands-342985.mp3" id="5_8hyp3"]

[node name="SceneHandler" type="Node" groups=["scene-handler"]]
script = ExtResource("1_w3pf8")

[node name="MainMenu" parent="." instance=ExtResource("2_4wdt3")]
offset_left = 1.0
offset_right = 1.0

[node name="DifficultySelect" parent="." instance=ExtResource("3_atkxh")]

[node name="Settings" parent="." instance=ExtResource("3_28kyq")]

[node name="HowToPlay" parent="." instance=ExtResource("4_8hyp3")]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8hyp3")
autoplay = true
bus = &"Music"

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"SFX"
